<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageview_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/menu_bg_sq"
        android:scaleType="centerCrop"
        android:layout_gravity="top"/>

    <LinearLayout
        android:id="@+id/menu_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:weightSum="1"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/title_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="520dp"
            android:layoutDirection="ltr"
            android:layout_weight="0.8"
            android:fillViewport="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/letter_s_view"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.2"
                android:src="@drawable/letter_s" />

            <ImageView
                android:id="@+id/letter_i_view"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.2"
                android:src="@drawable/letter_i" />

            <ImageView
                android:id="@+id/letter_m_view"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.2"
                android:src="@drawable/letter_m" />

            <ImageView
                android:id="@+id/letter_o_view"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.2"
                android:src="@drawable/letter_o" />

            <ImageView
                android:id="@+id/letter_n_view"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.2"
                android:src="@drawable/letter_n" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menu_table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:layout_gravity="center"
            android:orientation="horizontal">

                <Button
                    android:id="@+id/start_car_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/career_mode_btn"
                    android:layout_margin="5dp"
                    android:layout_gravity="bottom|left"
                    android:textColor="@color/white"
                    style="@style/Widget.MaterialComponents.Button"
                    android:backgroundTint="@color/weak"
                    />

                <Button
                    android:id="@+id/start_exh_Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exh_mode_btn"
                    android:layout_gravity="bottom|right"
                    android:layout_margin="5dp"
                    android:textColor="@color/white"
                    style="@style/Widget.MaterialComponents.Button"
                    android:backgroundTint="@color/weak"
                    />



        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:fillViewport="true"
            android:layout_gravity="center">
            <Button
                android:id="@+id/table_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/records_table_btn"
                android:layout_gravity="center"
                android:textColor="@color/white"
                style="@style/Widget.MaterialComponents.Button"
                android:backgroundTint="@color/weak"
                />

        </LinearLayout>

    </LinearLayout>
    <CheckBox
        android:id="@+id/soundCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="5dp"
        android:background="@drawable/selector_sound"
        android:button="@null"
        android:drawablePadding="20dp" />
</FrameLayout>